Bug 403743 - If you click the link to view the local source file, the line number is not selected
Summary: If you click the link to view the local source file, the line number is not s...
Status: RESOLVED FIXED
Alias: None
Product: lokalize
Classification: Applications
Component: editor (other bugs)
Version First Reported In: 18.12.1
Platform: Other Linux
: NOR major
Target Milestone: ---
Assignee: Simon Depiets
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-01-29 19:47 UTC by Ralf Habacker
Modified: 2019-03-29 11:12 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.04.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2019-01-29 19:47:39 UTC
STEPS TO REPRODUCE
1. start lokalize
2. open po file
3. select a translation entry
4. click on the source link

OBSERVED RESULT
If kate is configured as the default editor in the system settings, the corresponding file is displayed, but the corresponding line is not jumped to.

EXPECTED RESULT
kate should show the file at the corresponding line

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: openSUSE Leap 42.3
KDE Frameworks Version: 5.54
Qt Version: 5.11

ADDITIONAL INFORMATION
lokalize from git master also does not work in this area. Without this feature it is much more work to add context strings as requested at https://phabricator.kde.org/D18590 compared with the KDE4 based lokalize.
Comment 1 Ralf Habacker 2019-02-03 12:48:02 UTC
See https://phabricator.kde.org/D18693 for a related review request
Comment 2 Ralf Habacker 2019-02-05 10:03:45 UTC
Git commit 011e1f4844b50e2819d4fb193bfefeccb22215af by Ralf Habacker.
Committed on 05/02/2019 at 10:03.
Pushed by habacker into branch 'master'.

Add support for viewing the translation source with a custom editor

By jumping to the corresponding line number, the finding of corresponding
i18n calls is accelerated.

FIXED-IN:18.12.2
Reviewed By: sdepiets, #localization
Differential Revision: https://phabricator.kde.org/D18693

M  +10   -3    src/editortab.cpp
M  +6    -0    src/prefs/lokalize.kcfg
M  +2    -0    src/prefs/prefs.cpp
M  +16   -0    src/prefs/prefs_general.ui

https://commits.kde.org/lokalize/011e1f4844b50e2819d4fb193bfefeccb22215af
Comment 3 Simon Depiets 2019-02-05 10:48:32 UTC
Git commit efd296e14f3b240364cc1b48375127c2b26c35b8 by Simon Depiets, on behalf of Ralf Habacker.
Committed on 05/02/2019 at 10:40.
Pushed by sdepiets into branch 'Applications/18.12'.

Add support for viewing the translation source with a custom editor

By jumping to the corresponding line number, the finding of corresponding
i18n calls is accelerated.

FIXED-IN:18.12.2
Reviewed By: sdepiets, #localization
Differential Revision: https://phabricator.kde.org/D18693

M  +10   -3    src/editortab.cpp
M  +6    -0    src/prefs/lokalize.kcfg
M  +2    -0    src/prefs/prefs.cpp
M  +16   -0    src/prefs/prefs_general.ui

https://commits.kde.org/lokalize/efd296e14f3b240364cc1b48375127c2b26c35b8
Comment 4 Ralf Habacker 2019-03-27 17:21:27 UTC
Git commit 40b2c8a612bb83a6ca00275b198b56d3c36af5ed by Ralf Habacker.
Committed on 27/03/2019 at 17:21.
Pushed by habacker into branch 'master'.

Fix bug not finding local document

I set the source directory in lokalize to <src-dir> and tried to open a
file located in <src-dir>/xxx/yyy/zzz.cpp, but lokalize couldn't find
the file.

The problem is fixed with this patch by first searching the file under
the path formed by the source directory and the relative file path
from the po file.
Reviewed By: #localization, sdepiets
Differential Revision: https://phabricator.kde.org/D19114

M  +6    -1    src/editortab.cpp

https://commits.kde.org/lokalize/40b2c8a612bb83a6ca00275b198b56d3c36af5ed
Comment 5 Simon Depiets 2019-03-29 11:12:43 UTC
Git commit d4bffe34e26acd3efabab2345a7addc03ac0bf8d by Simon Depiets, on behalf of Ralf Habacker.
Committed on 19/03/2019 at 19:35.
Pushed by sdepiets into branch 'Applications/19.04'.

Fix bug not finding local document

I set the source directory in lokalize to <src-dir> and tried to open a
file located in <src-dir>/xxx/yyy/zzz.cpp, but lokalize couldn't find
the file.

The problem is fixed with this patch by first searching the file under
the path formed by the source directory and the relative file path
from the po file.
Reviewed By: #localization, sdepiets
Differential Revision: https://phabricator.kde.org/D19114

M  +6    -1    src/editortab.cpp

https://commits.kde.org/lokalize/d4bffe34e26acd3efabab2345a7addc03ac0bf8d