Add support for viewing the translation source with a custom editor

By jumping to the corresponding line number, the finding of corresponding
i18n calls is accelerated.

FIXED-IN:18.12.2
BUG:403743
Reviewed By: sdepiets, #localization
Differential Revision: https://phabricator.kde.org/D18693